DP-586 - Sidebar padding leads to text wrap around which then pushes other page down and hidden, without padding scroll bar and dropdown work correctly

--- a/src/docs.scss
+++ b/src/docs.scss
@@ -83,3 +83,7 @@ html[data-theme="dark"] .navbar__logo {
   position: sticky;
   left: var(--ifm-pre-padding);
 }
+
+.menu_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-styles-module {
+  padding: 0.0rem !important;
+}
